# trabajoPractico2METNUM

./: .gitignore  CMakeLists.txt  cargadorDeImagenes.cpp  cargadorDeImagenes.h  kfold.hpp  knn.hpp  main.cpp  moduloPCA.cpp  moduloPCA.h
lib/: ppmloader.cpp
lib/googletest-master/googletest/include/gtest/internal/: gtest-port.h
ppmloader/: main.cpp
tests/: README.txt  testChico.in
